--- a/src/main/resources/templates/mainGallery.html
+++ b/src/main/resources/templates/mainGallery.html
@@ -70,7 +70,80 @@
 
     <h1>List of Items</h1>
 
-    <ul class="item-catalog"></ul>
+    <div class="main-page-wrapper">
+        <div class="main-page-categories">
+            <div class="category-wrapper">
+                <img src="/css/img/Kitchen&Diningpng.png" alt="Category Image">
+                <a href="mainpage/search?category=Kitchen%20%26%20Dining" class="category">Kitchen & Dining</a>
+            </div>
+            <div class="category-wrapper">
+                <img src="/css/img/Pens&Stationary.png" alt="Category Image">
+                <a href="mainpage/search?category=Pens%20%26%20Stationery" class="category">Pens & Stationery</a>
+            </div>
+            <div class="category-wrapper">
+                <img src="/css/img/Furniture.png" alt="Category Image">
+                <a href="mainpage/search?category=Furniture" class="category">Furniture</a>
+            </div>
+            <div class="category-wrapper">
+                <img src="/css/img/Jewellery.png" alt="Category Image">
+                <a href="mainpage/search?category=Jewellery" class="category">Jewellery</a>
+            </div>
+            <div class="category-wrapper">
+                <img src="/css/img/Clothing.png" alt="Category Image">
+                <a href="mainpage/search?category=Clothing" class="category">Clothing</a>
+            </div>
+            <div class="category-wrapper">
+                <img src="/css/img/Footwear.png" alt="Category Image">
+                <a href="mainpage/search?category=Footwear" class="category">Footwear</a>
+            </div>
+            <div class="category-wrapper">
+                <img src="/css/img/Mobiles&Accessories.png" alt="Category Image">
+                <a href="mainpage/search?category=Mobiles%20%26%20Accessories" class="category">Mobiles & Accessories</a>
+            </div>
+            <div class="category-wrapper">
+                <img src="/css/img/Automotive.png" alt="Category Image">
+                <a href="mainpage/search?category=Automotive" class="category">Automotive</a>
+            </div>
+            <div class="category-wrapper">
+                <img src="/css/img/HomeDecor.png" alt="Category Image">
+                <a href="mainpage/search?category=Home%20Decor%20%26%20Festive%20Needs" class="category">Home Decor & Festive Needs</a>
+            </div>
+            <div class="category-wrapper">
+                <img src="/css/img/Watches.png" alt="Category Image">
+                <a href="mainpage/search?category=Watches" class="category">Watches</a>
+            </div>
+            <div class="category-wrapper">
+                <img src="/css/img/Beauty and Personal Care.png" alt="Category Image">
+                <a href="mainpage/search?category=Beauty%20and%20Personal%20Care" class="category">Beauty and Personal Care</a>
+            </div>
+            <div class="category-wrapper">
+                <img src="/css/img/Home Furnishing.png" alt="Category Image">
+                <a href="mainpage/search?category=Home%20Furnishing" class="category">Home Furnishing</a>
+            </div>
+            <div class="category-wrapper">
+                <img src="/css/img/Cameras & Accessories.png" alt="Category Image">
+                <a href="mainpage/search?category=Cameras%20%26%20Accessories" class="category">Cameras & Accessories</a>
+            </div>
+            <div class="category-wrapper">
+                <img src="/css/img/Tools & Hardware.png" alt="Category Image">
+                <a href="mainpage/search?category=Tools%20%26%20Hardware" class="category">Tools & Hardware</a>
+            </div>
+            <div class="category-wrapper">
+                <img src="/css/img/Health & Personal Care Appliances.png" alt="Category Image">
+                <a href="mainpage/search?category=Health%20%26%20Personal%20Care%20Appliances" class="category">Health & Personal Care Appliances</a>
+            </div>
+            <div class="category-wrapper">
+                <img src="/css/img/Beauty and Personal Care.png" alt="Category Image">
+                <a href="mainpage/search?category=Bags%2C%20Wallets%20%26%20Belts" class="category">Bags, Wallets & Belts</a>
+            </div>
+            <div class="category-wrapper">
+                <img src="/css/img/Food & Nutrition.png" alt="Category Image">
+                <a href="mainpage/search?category=Food%20%26%20Nutrition" class="category">Food & Nutrition</a>
+            </div>
+        </div>
+        <ul class="item-catalog"></ul>
+    </div>
+
 
 
 
@@ -81,7 +154,7 @@
     <script src="/js/galleryPage.js"></script>
     <script src="/js/isUserAuthenticated.js"></script>
     <script src="/js/shoppingCart.js"></script>
-    
+
 
 
 
