--- a/src/main/resources/static/css/filterItems.css
+++ b/src/main/resources/static/css/filterItems.css
@@ -10,17 +10,6 @@
     box-sizing: border-box;
 }
 
-.item-catalog {
-    display: flex;
-    flex: 0 0 80%;
-    flex-wrap: wrap;
-    gap: 3px;
-    padding: 10px;
-    justify-content: center;
-    list-style: none;
-    margin: 0;
-}
-
 .sorting-container {
     display: flex;
 }
@@ -32,15 +21,10 @@
 
 .brand-filter-brands {
     width: 100%;
-
     max-height: 600px;
-
     overflow-y: auto;
-
     border: 1px solid #ccc;
-
     padding: 10px;
-
     box-sizing: border-box;
 
 }
@@ -54,8 +38,13 @@
 
 .brand-item-container {
     display: flex;
-    margin-bottom: 10px;
+    padding: 10px 3px;
     align-items: center;
+    transition: 0.3s ease;
+}
+
+.brand-item-container:hover {
+    background-color: #ebebeb;
 }
 
 .brand-item {
@@ -64,7 +53,7 @@
 
 .price-input {
     height: 30px;
-    width: 70px;
+    width: 5vw;
     border-radius: 8px;
     border: solid 1px grey;
     padding-left: 7px;
@@ -83,9 +72,40 @@ input[type="number"]::-webkit-inner-spin-button {
     border: solid 1px grey;
     cursor: pointer;
     margin-left: 10px;
+    transition: 0.3s ease;
+
 
 }
 
 #low-price-number-input {
     margin-left: 10px;
+}
+
+#selected-filters {
+    display: flex;
+    gap: 20px;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
+.selected-filter,
+.selected-price {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    padding: 7px 12px;
+    border: 1px solid red;
+    border-radius: 20px;
+    transition: .3s ease;
+    cursor: pointer;
+}
+
+.selected-filter:hover {
+    background-color: #ebebeb;
+}
+
+.remove-filter-btn {
+    height: 20px;
+    width: 20px;
 }
