--- a/src/main/resources/templates/mainGallery.html
+++ b/src/main/resources/templates/mainGallery.html
@@ -9,6 +9,8 @@
     <!-- Для роботи з динамічним css -->
     <!-- <link rel="stylesheet" href="../static/css/mainGallery.css">
     <link rel="stylesheet" href="../static/css/header.css"> -->
+    <meta name="_csrf" th:content="${_csrf.token}" />
+    <meta name="_csrf_header" th:content="${_csrf.headerName}" />
 
     <!-- Для роботи сервера -->
     <link rel="stylesheet" href="/css/mainGallery.css">
