--- a/src/main/resources/templates/sellerPage.html
+++ b/src/main/resources/templates/sellerPage.html
@@ -217,8 +217,10 @@
 
 
                 <label for="edit-discount-price">Discount Price:</label>
-                <input type="number" id="edit-discount-price">
-                <p class="add-item-discounted-price-error form-error-text" style="display: none;">Discount price should be correct and less than retail price</p>
+                <div class="price-input-wrapper">
+                    <input type="text" id="edit-discount-price" pattern="^[0-9]+(\.[0-9]{2})?$">
+                </div>
+                <p class="edit-item-discounted-price-error form-error-text" style="display: none;">Discount price should be correct and less than retail price</p>
 
 
                 <label for="edit-quantity">Quantity:</label>
